added marking functionality

--- a/WebAPI/WebAPI.csproj
+++ b/WebAPI/WebAPI.csproj
@@ -13,6 +13,7 @@
 
   <ItemGroup>
     <Folder Include="wwwroot\js\components\" />
+    <Folder Include="wwwroot\js\components\QA\" />
   </ItemGroup>
 
   <ItemGroup>
