--- a/WebAPI/bower.json
+++ b/WebAPI/bower.json
@@ -5,6 +5,7 @@
     "bootstrap": "v3.3.7",
     "requirejs": "2.3.1",
     "text": "requirejs-text#2.0.15",
-    "knockout": "v3.4.2"
+    "knockout": "v3.4.2",
+    "jqcloud2": "v2.0.3"
   }
 }
